<resources>
    <string name="app_name">secondapp</string>


    <string name="todo">TODO</string>
    <string name="textview1"><b>LakshPaghadar</b></string>
    <string name="textview2"><b>8490064724</b></string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="details">details</string>
    <string name="email">email</string>
    <string name="submit">submit</string>
</resources>